Update sass to fix frontend bug with overflow

--- a/css/main.sass
+++ b/css/main.sass
@@ -598,7 +598,7 @@ code
 
 pre
   padding: 8px 12px
-  overflow-x: scroll
+  // overflow-x: scroll
   > code
     border: 0
     padding-right: 0
